# collaborative_transportation_ws

./: README.md
Universal_Robots_ROS_Driver/ur_robot_driver/launch/: ur10e_bringup.launch
mir_robot/mir_driver/launch/: mir.launch
mir_robot/mir_driver/nodes/: mir_bridge.py
mir_robot/mir_navigation/rviz/: navigation.rviz
mobile_robot/: CMakeLists.txt  README.md  package.xml
mobile_robot/cvxgen/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  testsolver.c  util.c  variables_definition.c
mobile_robot/debug/: energy_tank_debug.csv  energy_tank_debug.txt  force_debug.txt  force_filtered_file.txt  parametri_ammettenza_file.txt  q_dot_SNS_debug.txt  q_dot_filtered.txt  q_dot_opt_debug.txt  q_dot_opt_filtered_file.txt  q_dot_prova_debug.txt  q_dot_prova_uscita_debug.txt  q_dot_scaling_debug.txt
mobile_robot/include/: joint_1.h
mobile_robot/include/MATLAB_4_CBF/: BFGSUpdate.cpp  BFGSUpdate.h  MATLAB_4_CBF.cpp  MATLAB_4_CBF.h  MATLAB_4_CBF_data.cpp  MATLAB_4_CBF_data.h  MATLAB_4_CBF_internal_types.h  MATLAB_4_CBF_types.h  PresolveWorkingSet.cpp  PresolveWorkingSet.h  RemoveDependentIneq_.cpp  addBoundToActiveSetMatrix_.cpp  addBoundToActiveSetMatrix_.h  anonymous_function.h  buildInfo.mat  computeComplError.cpp  computeComplError.h  computeConstraints_.cpp  computeConstraints_.h  computeForwardDifferences.cpp  computeForwardDifferences.h  computeFval.cpp  computeFval.h  computeFval_ReuseHx.cpp  computeFval_ReuseHx.h  computeGradLag.cpp  computeGradLag.h  computeGrad_StoreHx.cpp  computeGrad_StoreHx.h  computeObjective_.cpp  computeObjective_.h  computeQ_.cpp  computeQ_.h  compute_deltax.cpp  countsort.cpp  countsort.h  defines.txt  deleteColMoveEnd.cpp  driver.cpp  driver.h  (+53 more)
mobile_robot/include/MATLAB_TANK/: BFGSUpdate.cpp  BFGSUpdate.h  MATLAB_OPT_TANK.cpp  MATLAB_OPT_TANK.h  MATLAB_OPT_TANK_data.cpp  MATLAB_OPT_TANK_data.h  MATLAB_OPT_TANK_internal_types.h  MATLAB_OPT_TANK_types.h  PresolveWorkingSet.cpp  RemoveDependentIneq_.cpp  RemoveDependentIneq_.h  addBoundToActiveSetMatrix_.cpp  anonymous_function.h  buildInfo.mat  computeComplError.cpp  computeComplError.h  computeConstraints_.cpp  computeConstraints_.h  computeForwardDifferences.cpp  computeForwardDifferences.h  computeFval.cpp  computeFval.h  computeFval_ReuseHx.cpp  computeFval_ReuseHx.h  computeGradLag.cpp  computeGradLag.h  computeGrad_StoreHx.cpp  computeGrad_StoreHx.h  computeObjective_.cpp  computeObjective_.h  computeQ_.cpp  compute_deltax.cpp  countsort.cpp  countsort.h  defines.txt  deleteColMoveEnd.cpp  deleteColMoveEnd.h  driver.cpp  driver.h  driver1.cpp  (+55 more)
mobile_robot/include/MATLAB_TANK_CBF/: BFGSUpdate.cpp  BFGSUpdate.h  MATLAB_OPT_TANK_CBF.cpp  MATLAB_OPT_TANK_CBF.h  MATLAB_OPT_TANK_CBF_data.cpp  MATLAB_OPT_TANK_CBF_data.h  MATLAB_OPT_TANK_CBF_internal_types.h  MATLAB_OPT_TANK_CBF_types.h  PresolveWorkingSet.cpp  RemoveDependentIneq_.cpp  addBoundToActiveSetMatrix_.cpp  anonymous_function.h  buildInfo.mat  computeComplError.cpp  computeComplError.h  computeConstraints_.cpp  computeConstraints_.h  computeForwardDifferences.cpp  computeForwardDifferences.h  computeFval.cpp  computeFval.h  computeFval_ReuseHx.cpp  computeFval_ReuseHx.h  computeGradLag.cpp  computeGradLag.h  computeGrad_StoreHx.cpp  computeGrad_StoreHx.h  computeObjective_.cpp  computeObjective_.h  computeQ_.cpp  compute_deltax.cpp  compute_deltax.h  countsort.cpp  countsort.h  defines.txt  deleteColMoveEnd.cpp  driver.cpp  driver.h  driver1.cpp  driver1.h  (+53 more)
mobile_robot/include/ammettenza/: admittance.h  admittance_tank.h  admittance_tank_cbf.h  controller.h  controllerSNS.h  controller_2.h  controller_arm.h  controller_mobile.h
mobile_robot/include/ammettenza_real/: arm_real.h  collaborative_transportation.h  mobile_real.h  robot_real.h
mobile_robot/launch/: mobile_robot.launch  parameters.launch  planning_context.launch
mobile_robot/materials/: wood.material
mobile_robot/robots/: mobile_robot.urdf.xacro
mobile_robot/robots/config/: admittance_parameters.yaml  basic_config.rviz  joint_limits.yaml  mobile_robot.srdf
mobile_robot/robots/config/controller/: arm_controller_ur10e.yaml  diffdrive_controller.yaml  joint_state_controller.yaml
mobile_robot/robots/config/controller/launch/: controller_utils.launch  ekf.launch.xml
mobile_robot/robots/config/launch/: planning_context.launch
mobile_robot/robots/urdf/: mir.urdf.xacro  ur10e.urdf.xacro
mobile_robot/robots/urdf/xacros/: common.gazebo.xacro  mir_100_v1.urdf.xacro  sick_s300.urdf.xacro
mobile_robot/src/: joint_1.cpp  joint_2.cpp  joint_prova.cpp  joint_prova_node.cpp  joint_publisher.cpp  joystick_node.cpp  mobile_publisher.cpp  mobile_subscriber.cpp  prova_Kalman.cpp  sensore_Forza.cpp  tf_to_odom.cpp
mobile_robot/src/ammettenza/: admittance.cpp  admittance_node.cpp  admittance_tank.cpp  admittance_tank_cbf.cpp  admittance_tank_cbf_node.cpp  admittance_tank_node.cpp  controller.cpp  controllerSNS.cpp  controllerSNS_node.cpp  controller_2.cpp  controller_2_node.cpp  controller_arm.cpp  controller_arm_node.cpp  controller_mobile.cpp  controller_mobile_node.cpp  controller_node.cpp
mobile_robot/src/ammettenza_real/: arm_real.cpp  arm_real_node.cpp  collaborative_transportation.cpp  collaborative_transportation_node.cpp  mobile_real.cpp  mobile_real_node.cpp  robot_real.cpp  robot_real_node.cpp
universal_robot/ur10e_moveit_config/launch/: planning_context.launch
universal_robot/ur_description/urdf/: my_robot_calibration.yaml
universal_robot/ur_description/urdf/inc/: ur_macro.xacro
